talpid-core/src/split_tunnel/macos/snapshots/talpid_core__split_tunnel__imp__process__test__deserialize_esmessage-5.snap
---
source: talpid-core/src/split_tunnel/macos/process.rs
expression: "(s, result)"
---
(
    "{\"version\":12}",
    Err(
        Error("Unsupported ESMessage version: 12", line: 1, column: 14),
    ),
)
